Fix webgl height bug on firefox

--- a/src/styles/projectpage.scss
+++ b/src/styles/projectpage.scss
@@ -10,6 +10,7 @@
     align-items: center;
     color: #ededed;
     margin-top: 1em;
+    margin-bottom: 1em;
     @include media("<4k"){
       margin-bottom: 5vh;
     }
